--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,33 +1,142 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,600");
+
+* {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 600;
+}
+
+p {
+  margin-bottom: 0.8rem;
+}
+.App {
+  background-color: #232733;
 }
 
 .App-header {
+  position: relative;
   background-color: #282c34;
-  min-height: 50%;
+  background-image: url("./img/code-bg.jpg");
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  padding-bottom: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.hero-text-wrapper {
+  display: inline-block;
+  background-color: #ffffff;
+  color: #222222;
+  padding: 50px;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.hero-text-wrapper.info {
+  margin-top: 75px;
+  padding: 35px 50px;
+  max-width: 75%;
+}
+
+.hero-text-wrapper.info p:last-of-type {
+  margin-bottom: 0;
+}
+
+.hero-text-wrapper h1 {
+  font-size: 144px;
+  line-height: 0.7;
+}
+
+.hero-text-wrapper h1 span {
+  font-size: 96px;
+  font-weight: 300;
+}
+
+.header-menu-items {
+  position: fixed;
+  top: 0;
+  right: 0;
+  color: #222222;
+  list-style: none;
+}
+
+.header-menu-items > li {
+  display: inline-block;
+  padding: 20px 30px;
+  background-color: #fff;
+}
+
+.header-menu-items li:first-of-type {
+  border-right: 1px solid #dddddd;
+}
+
+.user-search-heading {
+  display: inline-block;
+  background-color: #a1c95e;
+  color: #222222;
+  padding: 10px 15px;
+  font-weight: 600;
+}
+
+.github-search-input {
+  width: 350px;
+  height: 60px;
+  padding-left: 15px;
+  border: 0;
+}
+
+section#github-search {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+.user-card {
+  padding: 45px;
+  background-color: #3d404a;
+  width: 30%;
+  margin-bottom: 5%;
+}
+
+section#github-search-results {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+a.user-card {
+  color: #fff;
+  text-decoration: none;
+}
+.user-title {
+  margin-top: 20px;
+}
+
+.btn-outline-success {
+  color: #a1c95e;
+  background-color: transparent;
+  background-image: none;
+  border-color: #a1c95e;
+}
+
+.user-card:hover .view-profile-btn,
+.btn-outline-success:hover {
+  color: #fff;
+  background-color: #a1c95e;
+  border-color: #a1c95e;
+}
+
+.view-profile-btn {
+  margin-top: 15px;
 }
