--- a/client/src/App.css
+++ b/client/src/App.css
@@ -256,14 +256,12 @@ a.user-card {
   position: relative;
 }
 
-.single-repo-wrapper hr {
-  border-color: #fff;
-  opacity: 0.6;
-}
-
 .repo-title {
   font-size: 26px;
   font-weight: 400;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.6);
+  padding-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .repo-description {
@@ -271,9 +269,14 @@ a.user-card {
 }
 
 hr.small-divider {
+  border-color: #fff;
   width: 20%;
   display: inline-block;
   opacity: 0.1;
+}
+
+.view-repo-btn-wrapper {
+  margin-top: auto;
 }
 
 .view-repo-btn {
@@ -282,7 +285,7 @@ hr.small-divider {
   color: #5cffe2;
   padding-right: 25px;
   padding-left: 25px;
-  margin-top: auto;
+  width: 100%;
 }
 
 .view-repo-btn:hover,
@@ -304,4 +307,26 @@ hr.small-divider {
   font-size: 12px;
   opacity: 0.4;
   letter-spacing: 0.25px;
+}
+
+.tag {
+  text-transform: uppercase;
+  font-size: 12px;
+  display: inline-block;
+  background-color: #5cffe2;
+  color: #222222;
+  padding: 2px 10px;
+  margin: 5px 5px 5px 0px;
+  border-radius: 25px;
+  font-weight: 600;
+}
+
+span.stars-wrapper {
+  font-size: 13px;
+}
+
+.site-wrapper a,
+.site-wrapper a:hover,
+.site-wrapper a:focus {
+  color: #fff;
 }
