Languages tab functioning
TODO: Stats panel + mobile optimisation

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -363,3 +363,9 @@ html [type="button"] {
   margin-bottom: 30px;
   cursor: pointer;
 }
+
+.tagCollapse,
+.languageCollapse {
+  display: block;
+  width: 100%;
+}
