--- a/client/src/App.css
+++ b/client/src/App.css
@@ -369,3 +369,20 @@ html [type="button"] {
   display: block;
   width: 100%;
 }
+
+.info-wrapper {
+  background-color: #3d404a;
+  color: #ffffff;
+  padding: 60px 80px;
+  margin-top: 30px;
+}
+
+.info-block h2 {
+  font-size: 20px;
+  margin-right: 20px;
+}
+
+.info-block p {
+  font-size: 20px;
+  font-weight: 300;
+}
