Updated 404 heading font size

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -655,6 +655,10 @@ html [type="button"] {
     font-size: 36px;
   }
 
+  .fourohfour-heading {
+    font-size: 120px;
+  }
+
   .fourohfour-text p {
     font-size: 18px;
   }
